changing new seed button to lower case

--- a/views/seeds/index.erb
+++ b/views/seeds/index.erb
@@ -32,7 +32,7 @@ end
 
 <hr>
 
-<a class="button" href="/databases/<%= @db_name %>/tables/<%= @table_name %>/seeds/new">NEW SEED</a>
+<a class="button" href="/databases/<%= @db_name %>/tables/<%= @table_name %>/seeds/new">New Seed</a>
 
 <% data_href = "/databases/#{@db_name}/tables/#{@table_name}/data" %>
 <a class="button" href="<%= data_href %>">View Data</a>
